--- a/frontend/src/app/components/input-buttons/input-buttons.html
+++ b/frontend/src/app/components/input-buttons/input-buttons.html
@@ -6,7 +6,8 @@ px-4 py-2 text-blue-400">
 </button>
 
 <button class="flex gap-2
-rounded px-4 py-2 bg-lime-400">
+rounded px-4 py-2 bg-lime-400"
+(click)="onClickUserModal()">
     <lucide-icon [img]="PlusIcon" class="my-icon "></lucide-icon>
     Create New User
 </button>
