--- a/frontend/src/app/components/user-modal/user-modal.html
+++ b/frontend/src/app/components/user-modal/user-modal.html
@@ -20,23 +20,23 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
             (valueChange)="onUserTypeChange($event)"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="User Role"
-            [options]="userRoles" 
+            [options]="userRoles"
             (valueChange)="onUserRoleChange($event)"></app-dropdown>
 
             <app-typing-input class="w-[45%]" label="First Name"
-            type="text" placeholder="First Name" 
+            type="text" placeholder="First Name"
             (valueChange)="onFirstNameChange($event)"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Last Name"
-            type="text" placeholder="Last Name" 
+            type="text" placeholder="Last Name"
             (valueChange)="onLastNameChange($event)"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Phone Number"
-            type="tel" placeholder="Phone Number" 
+            type="tel" placeholder="Phone Number"
             (valueChange)="onPhoneNumberChange($event)"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Email ID"
-            type="email" placeholder="Email" 
+            type="email" placeholder="Email"
             (valueChange)="onEmailChange($event)"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Password"
@@ -60,12 +60,12 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
             (valueChange)="onNumberFormatChange($event)"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="Measurement System"
-            [options]="measurementSystems" 
+            [options]="measurementSystems"
             info="Select your measurement unit display format"
             (valueChange)="onMeasureChange($event)"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="Decimal Places"
-            [options]="decimalPlaces" 
+            [options]="decimalPlaces"
             info="Select your measurement unit display format"
             (valueChange)="onDecimalChange($event)"></app-dropdown>
 
@@ -73,14 +73,14 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
                 <label class="text-sm">User Status</label>
                 <div class="flex gap-2">
                     <p class="text-sm font-light">Deactivate</p>
-                    <div id="user-stat-outer" class="w-14 h-6 rounded-xl 
+                    <div id="user-stat-outer" class="w-14 h-6 rounded-xl
                     border px-0.5 relative"
                     [ngClass]="{
                         'border-blue-400': userStatus,
                         'border-gray-400': !userStatus
                     }">
                         <button class="size-6" (click)="toggleUserStatus($event)">
-                                <div id="user-stat-btn" class="size-4 rounded-full 
+                                <div id="user-stat-btn" class="size-4 rounded-full
                                 absolute top-0.5 transition-all ease-linear duration-500"
                                 [ngClass]="{
                                     'bg-blue-400 right-1': userStatus,
@@ -96,26 +96,33 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
             <div class="w-3/4 flex flex-col gap-2">
                 <label class="text-sm">User Team</label>
                 <div class="flex gap-2">
-                    <label *ngFor="let team of userTeams" 
+                    <label *ngFor="let team of userTeams"
                     class="text-sm font-light mr-4 flex items-center gap-1">
-                        <input type="checkbox" [(ngModel)]="team.checked" 
+                        <input type="checkbox" [(ngModel)]="team.checked"
                         name="userTeam" />
                         {{ team.label }}
                     </label>
                 </div>
             </div>
-            
+
         </div>
         <div class="flex gap-2 px-4 self-end">
-                <button class="font-medium hover:text-slate-50 text-gray-400 
+                <button class="font-medium hover:text-slate-50 text-gray-400
                 text-sm transition-colors duration-400
                 px-4 py-2 border border-gray-400 rounded
                 hover:bg-red-950"
                 (click)="onCancelCreate($event)">Cancel</button>
-                <button class="font-medium text-sm
-                px-4 py-2 rounded
-                hover:bg-lime-500 bg-lime-400 transition-colors duration-400"
-                type="submit">Submit</button>
+                @if(mode === 'create') {
+                    <button class="font-medium text-sm
+                    px-4 py-2 rounded
+                  hover:bg-lime-500 bg-lime-400 transition-colors duration-400"
+                            type="submit">Create</button>
+                } @else if (mode === 'edit') {
+                  <button class="font-medium text-sm
+                    px-4 py-2 rounded
+                  hover:bg-lime-500 bg-lime-400 transition-colors duration-400"
+                          type="submit">Edit</button>
+                }
         </div>
     </form>
 </section>
