--- a/frontend/src/app/components/dropdown/dropdown.html
+++ b/frontend/src/app/components/dropdown/dropdown.html
@@ -5,10 +5,16 @@ bg-white w-full">
 
     <div class="flex justify-between relative w-full"
     (click)="showDropDown()">
+      @if (selectedValue) {
         <span class="border border-gray-300 rounded
         p-2 cursor-pointer w-full outline-0 font-light text-sm"
-        >{{selectedValue || 'Select' + ' ' + label}}</span>
-        <lucide-icon class="absolute 
+        >{{selectedValue}}</span>
+      } @else {
+        <span class="border border-gray-300 rounded
+        p-2 cursor-pointer w-full outline-0 font-light text-sm opacity-50"
+        >{{'Select' + ' ' + label}}</span>
+      }
+        <lucide-icon class="absolute
         top-1/4 right-1" [img]="ChevronDown"></lucide-icon>
     </div>
     @if (selectDropDown) {
@@ -17,7 +23,7 @@ bg-white w-full">
             <ul class="list-none">
                 @for(option of options; track $index) {
                     <li class="px-4 py-6 font-light text-sm
-                    hover:bg-slate-200 bg-white transition-colors 
+                    hover:bg-slate-200 bg-white transition-colors
                     duration[0.4s] cursor-pointer"
                     (click)="selectOption(option)">{{option}}</li>
                 }
