Progress: 1. The edit operation is working successfully.
Next Steps:
1. The user Teams chosen by user is not reflectiong in the frontend while editing.
2. Enable view operation.
3. Enable delete operation.
4. Enable data validation
5. Enable automatic refresh
6. Search and Filter ops

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,6 +1,6 @@
-<app-user-modal *ngIf="showUserModal"
+<app-user-modal *ngIf="showUserModal && selectedUser"
                 [mode]="modalMode"
-                [selectedUserId]="selectedUserId"
+                [selectedUser]="selectedUser"
                 class="w-1/3"
 (toggleOffUserModal)="toggleOffUserModal()"></app-user-modal>
 <div class="px-24 py-10 transition-all duration-300" [ngClass]="{
