--- a/frontend/src/app/components/user-modal/user-modal.html
+++ b/frontend/src/app/components/user-modal/user-modal.html
@@ -17,35 +17,35 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
         scrollbar-thin scrollbar-thumb-blue-400 scrollbar-track-white">
             <app-dropdown class="w-[45%]" label="User Type"
             [options]="userTypes"
-            (valueChange)="onUserTypeChange($event)"></app-dropdown>
+            [(value)]="selectedUserType"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="User Role"
             [options]="userRoles"
-            (valueChange)="onUserRoleChange($event)"></app-dropdown>
+            [(value)]="selectedUserRole"></app-dropdown>
 
             <app-typing-input class="w-[45%]" label="First Name"
             type="text" placeholder="First Name"
-            (valueChange)="onFirstNameChange($event)"></app-typing-input>
+            [(value)]="firstName"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Last Name"
             type="text" placeholder="Last Name"
-            (valueChange)="onLastNameChange($event)"></app-typing-input>
+            [(value)]="lastName"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Phone Number"
             type="tel" placeholder="Phone Number"
-            (valueChange)="onPhoneNumberChange($event)"></app-typing-input>
+            [(value)]="phoneNumber"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Email ID"
             type="email" placeholder="Email"
-            (valueChange)="onEmailChange($event)"></app-typing-input>
+            [(value)]="email"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Password"
             type="password" input="password" placeholder="Password"
-            (valueChange)="onPasswordInput($event)"></app-typing-input>
+            [(value)]="password"></app-typing-input>
 
             <app-typing-input class="w-[45%]" label="Confirm Password"
             type="password" input="password" placeholder="Confirm Password"
-            (valueChange)="onConfirmPassword($event)"></app-typing-input>
+            [(value)]="password"></app-typing-input>
 
             <app-password-strength-bar class="w-full" [password]="password"></app-password-strength-bar>
 
@@ -53,21 +53,21 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
 
             <app-dropdown class="w-[45%] mt-4" label="User Currency"
             [options]="userCurrencies"
-            (valueChange)="onUserCurrencyChange($event)"></app-dropdown>
+            [(value)]="selectedUserCurrency"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="Number Format"
             [options]="numberFormats" info="Select your number display format"
-            (valueChange)="onNumberFormatChange($event)"></app-dropdown>
+            [(value)]="selectedNumberFormat"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="Measurement System"
             [options]="measurementSystems"
             info="Select your measurement unit display format"
-            (valueChange)="onMeasureChange($event)"></app-dropdown>
+            [(value)]="selectedMeasurementSystem"></app-dropdown>
 
             <app-dropdown class="w-[45%]" label="Decimal Places"
             [options]="decimalPlaces"
             info="Select your measurement unit display format"
-            (valueChange)="onDecimalChange($event)"></app-dropdown>
+            [(value)]="selectedDecimalPlace"></app-dropdown>
 
             <div class="w-3/4 flex flex-col gap-2 flex-wrap">
                 <label class="text-sm">User Status</label>
