Progress: 1. Auto-reload is successful.
Next Steps:
1. The user Teams chosen by user is not reflectiong in the frontend while editing.
2. Enable view operation.
3. Enable delete operation.
4. Enable data validation
5. Search and Filter ops

--- a/frontend/src/app/components/table/table.html
+++ b/frontend/src/app/components/table/table.html
@@ -7,7 +7,7 @@
                 <td class="py-4 px-14 font-bold">Status</td>
                 <td class="py-4 px-14 font-bold">Actions</td>
         </tr>
-        @for(user of users; track $index) {
+        @for(user of users(); track $index) {
         <tr class="border-x-0 border-t-0 border-b border-gray-300">
                 <td class="py-4 px-14 font-extralight">{{user.firstName + ' ' + user.lastName}}</td>
                 <td class="py-4 px-14 font-extralight">{{user.email}}</td>
