Progress: 1. Established view op.
Next Steps:
1. The user Teams chosen by user is not reflectiong in the frontend while editing.
2. Enable delete operation.
3. Enable data validation
4. Search and Filter ops
5. Create custom component for alerts and pop-ups

--- a/frontend/src/app/components/dropdown/dropdown.html
+++ b/frontend/src/app/components/dropdown/dropdown.html
@@ -4,6 +4,7 @@ bg-white w-full">
     <p class="text-xs font-light">{{info}}</p>
 
     <div class="flex justify-between relative w-full"
+         [class.opacity-50]="disabled"
     (click)="showDropDown()">
       @if (value) {
         <span class="border border-gray-300 rounded
