--- a/frontend/src/app/components/typing-input/typing-input.html
+++ b/frontend/src/app/components/typing-input/typing-input.html
@@ -6,7 +6,8 @@
             border border-1 border-gray-300 rounded outline-0"
             [type]="type" [placeholder]="placeholder"
                    [value]="value"
-            (input)="onInputChange($event)"/>
+            (input)="onInputChange($event)"
+            [disabled]="disabled"/>
             @if (!showPassword) {
                 <lucide-icon [img]="EyeOff" class="opacity-50
                 absolute top-1/4 right-1" (click)="togglePassword()"></lucide-icon>
@@ -18,7 +19,12 @@
     } @else {
         <input class="text-sm p-2
         border border-1 border-gray-300 rounded
-        outline-0" [type]="type" [placeholder]="placeholder" [value]="value"
-        (input)="onInputChange($event)"/>
+        outline-0"
+               [ngClass]="{
+               'opacity-50': disabled,
+               }"
+               [type]="type" [placeholder]="placeholder" [value]="value"
+        (input)="onInputChange($event)"
+        [disabled]="disabled"/>
     }
 </div>
