Progress: 1. Enabled the delete op.
Next Steps:
1. The user Teams chosen by user is not reflectiong in the frontend while editing.
2. Enable data validation
3. Search and Filter ops
4. Create custom component for alerts and pop-ups

--- a/frontend/src/app/components/table/table.html
+++ b/frontend/src/app/components/table/table.html
@@ -39,7 +39,7 @@
                   </div>
                   <div class="hover:bg-gray-200 bg-white transition-colors
                   duration-500 rounded-full p-1 size-6 cursor-pointer"
-                  (click)="enableDelete(user)" )>
+                  (click)="deleteUser(user)">
                     <lucide-icon [img]="Trash" class="size-4 stroke-black">
 
                     </lucide-icon>
