--- a/frontend/src/app/components/user-modal/user-modal.html
+++ b/frontend/src/app/components/user-modal/user-modal.html
@@ -127,13 +127,17 @@ rounded drop-shadow-2xl w-1/3 h-3/4">
                 px-4 py-2 border border-gray-400 rounded
                 hover:bg-red-950"
                 (click)="onCancelCreate($event)">Cancel</button>
-                @if(!isViewMode) {
                   @if(mode === 'create') {
-                    <button type="submit">Create</button>
+                    <button class="font-medium text-sm
+                    px-4 py-2 rounded
+                    hover:bg-lime-500 bg-lime-400 transition-colors duration-400"
+                            type="submit">Create</button>
                   } @else if (mode === 'edit') {
-                    <button type="submit">Edit</button>
+                    <button class="font-medium text-sm
+                    px-4 py-2 rounded
+                    hover:bg-lime-500 bg-lime-400 transition-colors duration-400"
+                            type="submit">Edit</button>
                   }
-                }
 
         </div>
     </form>
