Progress: 1. Established data validation and password check.
Next Steps:
1. The user Teams chosen by user is not reflecting in the frontend while editing and viewing user.
2. Search and Filter ops
3 Create custom component for alerts and pop-ups

--- a/frontend/src/app/components/dropdown/dropdown.html
+++ b/frontend/src/app/components/dropdown/dropdown.html
@@ -18,6 +18,9 @@ bg-white w-full">
         <lucide-icon class="absolute
         top-1/4 right-1" [img]="ChevronDown"></lucide-icon>
     </div>
+    @if(hasError()) {
+      <p class="text-sm text-red-500">Select {{label}}</p>
+    }
     @if (selectDropDown) {
         <div class="bg-white
         absolute z-50 top-1/3 w-full drop-shadow-lg">
