--- a/frontend/src/app/components/typing-input/typing-input.html
+++ b/frontend/src/app/components/typing-input/typing-input.html
@@ -5,7 +5,7 @@
             <input class="text-sm p-2 w-full
             border border-1 border-gray-300 rounded outline-0"
             [type]="type" [placeholder]="placeholder"
-                   [value]="value"
+            [value]="value" 
             (input)="onInputChange($event)"
             [disabled]="disabled"/>
             @if (!showPassword) {
@@ -16,6 +16,9 @@
                 absolute top-1/4 right-1" (click)="togglePassword()"></lucide-icon>
             }
         </div>
+        @if(hasError()) {
+            <p class="text-sm text-red-500">Enter {{label}}</p>
+        }
     } @else {
         <input class="text-sm p-2
         border border-1 border-gray-300 rounded
@@ -26,5 +29,9 @@
                [type]="type" [placeholder]="placeholder" [value]="value"
         (input)="onInputChange($event)"
         [disabled]="disabled"/>
+
+        @if(hasError()) {
+            <p class="text-sm text-red-500">Enter {{label}}</p>
+        }
     }
 </div>
