Progress: 1. Established the frontend for filters 2. Established the routes and controllers for fitlers
Next Steps:
1. The radio options such as User Type and Status are failing when filters have previous value.
2. Date based filter needs to be established.
3. Create custom component for alerts and pop-ups
4. The user Teams chosen by user is not reflecting in the frontend while editing.

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -12,7 +12,8 @@
     class="flex gap-2"></app-input-buttons>
   </div>
   <hr class="my-6"/>
-  <div class="flex justify-center">
+  <div class="flex justify-center gap-4">
+    <app-filter class="w-1/5 h-1/2"></app-filter>
     <app-table (toggleOnUserModal)="toggleOnUserModal($event)"
     ></app-table>
   </div>
